--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ $(document).ready(function () {
 <div style="display: flex; align-items: flex-start;">
 <p>
 Hello World! My name is Kindyl Alfonso. I graduated in July of 2024 from
-the University of New Hampshire with a Master of Science in Business
+the University of New Hampshire as a Master of Science in Business
 Analytics. Here I will provide a summary of my projects, experiences,
 and myself. </br> </br>
 <a href="https://www.linkedin.com/in/kindylalfonso" target="_blank">Get
