--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="./projects.html">Course Projects</a>
+  <a href="./Projects.html">Course Projects</a>
 </li>
 <li>
   <a href="./resume.html">Resume</a>
@@ -256,7 +256,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/githubusername/mywebsite">
+  <a href="https://github.com/kindylalfonso">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
