--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="./Projects.html">Course Projects</a>
+  <a href="./Projects.rmd">Course Projects</a>
 </li>
 <li>
   <a href="./resume.html">Resume</a>
