--- a/Projects.html
+++ b/Projects.html
@@ -428,6 +428,7 @@ Regression, K-Nearest Neighbors, Random Forest, Bagging, XGBoost,
 Support Vector Machines), Model Evaluation (Confusion Matrices, Testing
 Error Rates, AUC)</p>
 <p><a href="rainfall_in_australia.html">Click here for code</a></p>
+<p><a StatisticalAnalysis.pdf">Click here for code</a></p>
 </div>
 <div id="section-movie-data-web-scraping" class="section level2">
 <h2>Movie Data Web Scraping</h2>
