--- a/Projects.html
+++ b/Projects.html
@@ -427,8 +427,8 @@ as confusion matrices, testing error rates, and Area Under the Curve
 Regression, K-Nearest Neighbors, Random Forest, Bagging, XGBoost,
 Support Vector Machines), Model Evaluation (Confusion Matrices, Testing
 Error Rates, AUC)</p>
-<p><a href="rainfall_in_australia.html">Click here for code</a></p>
-<p><a StatisticalAnalysis.pdf">Click here for code</a></p>
+<p><a href="rainfall_in_australia.html">Code</a></p>
+<p><a href="StatisticalAnalysis.pdf">Project Report</a></p>
 </div>
 <div id="section-movie-data-web-scraping" class="section level2">
 <h2>Movie Data Web Scraping</h2>
