--- a/Projects.html
+++ b/Projects.html
@@ -439,6 +439,7 @@ of questions asked by our professor using various charts.</p>
 Matplotlib, Seaborn</em>)</p>
 <p><strong>Skills</strong>: Data Visualization, Web-Scraping, Data
 Cleaning, Exploratory Data Analysis, Charting and Storytelling</p>
+<p><a href="FinalProject_Kindyl_Dylan_Sam.ipynb">Code</a></p>
 </div>
 
 
