--- a/Projects.html
+++ b/Projects.html
@@ -427,7 +427,7 @@ as confusion matrices, testing error rates, and Area Under the Curve
 Regression, K-Nearest Neighbors, Random Forest, Bagging, XGBoost,
 Support Vector Machines), Model Evaluation (Confusion Matrices, Testing
 Error Rates, AUC)</p>
-<p><a href="rainfall_in_australia.rmd">Code</a></p>
+<p><a href="rainfall_in_australia.qmd">Code</a></p>
 <p><a href="StatisticalAnalysis.pdf">Project Report</a></p>
 </div>
 <div id="section-movie-data-web-scraping" class="section level2">
