--- a/resume.html
+++ b/resume.html
@@ -275,7 +275,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>You can download my resume <a href="Resume.pdf">here</a>.</p>
+<p>You can download my resume <a href="Alfonso_Kindyl_Resume.pdf">here</a>.</p>
 
 
 
