--- a/Projects.html
+++ b/Projects.html
@@ -359,17 +359,21 @@ div.tocify {
 
 <div id="section-airbnb-high-booking-rates" class="section level2">
 <h2>Airbnb High Booking Rates</h2>
-<p>Received Airbnb dataset with 95 columns of data which was cleaned and
+<p>Received Airbnb dataset with 95 columns of data which was meticulously cleaned and
 reduced to a usable format for various uses including text analysis and
 building statistical models.</p>
-<p>Part I: Competing versus classmates on Kaggle to build the most
-accurate statistical model to predict the binary variable of whether a
-property would be high performing (high_booking) <em>Model accuracy
-determined using Area Under the Curve (AUC) metric</em>.</p>
+<p>Part I: Competed against classmates on Kaggle to build the most accurate statistical model for predicting whether a property would be high-performing (high_booking)<em>Model accuracy
+determined using Area Under the Curve (AUC) metric</em>. Our team's most successful 
+model submission predicted the testing dataset with an 81.2% AUC using XGBoost. To identify key variables influencing performance, we also utilized Logistic Regression and Lasso Regression.</p>
 <p>Part II: Researched the New Orleans market to build a model to
 provide insights into why certain properties are high booking within
-that specific market. Our team used 3 real Airbnb listings to pitch as a
+our specific market. Our team used 3 real Airbnb listings to pitch to investors as a
 likely high booked property.</p>
+<p>Cleaning Process for NOLA Subset:</p>    
+<p>Geospatial Analysis: I created the geo_dist variable, which calculated the distance from each property to Bourbon Street, a major tourist attraction and central hub in New Orleans. This helped quantify the impact of location on booking performance. I then created an interactable map to feature which properties were high booking versus not high booking. I also 
+extracted keywords from the amenities column to a dummy variable.</p>
+<p>Interactive Visualization: To explore spatial trends, I built an interactive map displaying high-booking versus non-high-booking properties</p>
+<p>Text Feature Engineering: I extracted keywords from the amenities column, transforming them into dummy variables to analyze which features (e.g., "pool," "free parking," "pet-friendly") contributed to higher bookings.</p>
 <p><strong>Programs:</strong> RStudio</p>
 <p><strong>Skills:</strong> ETL, Exploratory Data Analysis, Data
 Visualization, Machine Learning</p>
@@ -403,7 +407,7 @@ Modelling</p>
 class="section level2">
 <h2>Time Series Using Stochastic Volatility</h2>
 <p>This project tasked us to research a time series model that was not
-covered in class and apply it to real world data. We chose stochastic
+covered in class and apply it to real-world data. We chose stochastic
 volatility within the state space framework, a relatively active area of
 research. Using NVDA stock data, we implemented the model to predict
 future stock prices, leveraging stochastic volatility to capture the
