--- a/Projects.html
+++ b/Projects.html
@@ -362,14 +362,14 @@ div.tocify {
 <p>Received Airbnb dataset with 95 columns of data which was meticulously cleaned and
 reduced to a usable format for various uses including text analysis and
 building statistical models.</p>
-<p>Part I: Competed against classmates on Kaggle to build the most accurate statistical model for predicting whether a property would be high-performing (high_booking)<em>Model accuracy
+<p><strong><Part I:</strong> Competed against classmates on Kaggle to build the most accurate statistical model for predicting whether a property would be high-performing (high_booking)<em>Model accuracy
 determined using Area Under the Curve (AUC) metric</em>. Our team's most successful 
 model submission predicted the testing dataset with an 81.2% AUC using XGBoost. To identify key variables influencing performance, we also utilized Logistic Regression and Lasso Regression.</p>
-<p>Part II: Researched the New Orleans market to build a model to
+<p><strong>Part II:</strong>Researched the New Orleans market to build a model to
 provide insights into why certain properties are high booking within
 our specific market. Our team used 3 real Airbnb listings to pitch to investors as a
 likely high booked property.</p>
-<p>Cleaning Process for NOLA Subset:</p>    
+<p><strong>Cleaning Process for NOLA Subset:</strong>strong></p>    
 <p>Geospatial Analysis: I created the geo_dist variable, which calculated the distance from each property to Bourbon Street, a major tourist attraction and central hub in New Orleans. This helped quantify the impact of location on booking performance. I then created an interactable map to feature which properties were high booking versus not high booking. I also 
 extracted keywords from the amenities column to a dummy variable.</p>
 <p>Interactive Visualization: To explore spatial trends, I built an interactive map displaying high-booking versus non-high-booking properties</p>
