--- a/Projects.html
+++ b/Projects.html
@@ -377,6 +377,8 @@ extracted keywords from the amenities column to a dummy variable.</p>
 <p><strong>Programs:</strong> RStudio</p>
 <p><strong>Skills:</strong> ETL, Exploratory Data Analysis, Data
 Visualization, Machine Learning</p>
+<p><a href="Kindyl.rmd">Code</a></p>
+</div>
 </div>
 <div id="section-cyberbullying-tweet-analysis" class="section level2">
 <h2>Cyberbullying Tweet Analysis</h2>
